--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /node_modules
 /public/hot
 /public/storage
+
+/public/js
+/public/css
+
 /storage/*.key
 /vendor
 .env
@@ -9,3 +13,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+/v8-compile-cache-0
